Fixed vertical alignment of icons.

--- a/app/components/navbar/navbar.less
+++ b/app/components/navbar/navbar.less
@@ -87,6 +87,7 @@
 .Navbar-icon {
   width: @Navbar-iconSize;
   font-size: 20px;
+  vertical-align: middle;
 }
 
 @Navbar-buttonHeight: 20px;
@@ -397,4 +398,8 @@
 
 .Navbar-icon-profile {
   float: left;
+}
+
+.Navbar-menuText {
+  padding-left: @spacing-tiny;
 }
